Enabled ruff hooks

--- a/potability.ipynb
+++ b/potability.ipynb
@@ -24,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 251k/251k [00:00<00:00, 484kB/s]"
+      "100%|██████████| 251k/251k [00:00<00:00, 478kB/s]"
      ]
     },
     {
@@ -39,13 +39,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2025-01-16 20:28:00.841394: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-01-16 20:28:00.981950: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-01-16 20:28:01.120448: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1737070081.244364    2922 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1737070081.270593    2922 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-01-16 20:28:01.501145: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operati"
+      "2025-01-17 14:47:26.647991: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n"
      ]
     },
     {
@@ -59,7 +53,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ons.\n",
+      "2025-01-17 14:47:26.776938: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-01-17 14:47:26.879503: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1737136046.979294   63469 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1737136047.005661   63469 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-01-17 14:47:27.233904: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -68,28 +67,24 @@
     "#download dataset from kaggle\n",
     "#https://www.kaggle.com/datasets/adityakadiwal/water-potability/data\n",
     "import kagglehub\n",
-    "path = kagglehub.dataset_download(\"adityakadiwal/water-potability\", force_download=True)\n",
-    "print(\"Path to dataset files:\", path)\n",
     "\n",
     "# Import das Bibliotecas\n",
-    "import tensorflow as tf\n",
-    "import keras\n",
-    "\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import (\n",
+    "    ConfusionMatrixDisplay,\n",
+    "    log_loss,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    ")\n",
+    "from sklearn.metrics import accuracy_score as acc\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "import mlflow\n",
     "\n",
-    "from sklearn.metrics import mean_squared_error as mse\n",
-    "from sklearn.metrics import accuracy_score as acc\n",
-    "from sklearn.metrics import f1_score as f1\n",
-    "from sklearn.metrics import brier_score_loss as brier\n",
-    "from sklearn.metrics import log_loss, precision_score, recall_score\n",
-    "from sklearn import metrics\n",
-    "from sklearn.metrics import make_scorer\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay"
+    "path = kagglehub.dataset_download(\"adityakadiwal/water-potability\", force_download=True)\n",
+    "print(\"Path to dataset files:\", path)\n"
    ]
   },
   {
@@ -214,7 +209,10 @@
    "outputs": [],
    "source": [
     "# Split dos dados\n",
-    "data_df_train, data_df_test = train_test_split(data_df, test_size=0.30, random_state=0, shuffle=True)"
+    "data_df_train, data_df_test = train_test_split(data_df,\n",
+    "                                               test_size=0.30,\n",
+    "                                               random_state=0,\n",
+    "                                               shuffle=True)"
    ]
   },
   {
@@ -226,9 +224,17 @@
     "# Normalização dos dados numéricos\n",
     "from sklearn import linear_model\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import MinMaxScaler, RobustScaler\n",
+    "from sklearn.preprocessing import RobustScaler\n",
     "\n",
-    "numeric_features = ['ph', 'Hardness', 'Solids', 'Chloramines', 'Sulfate', 'Conductivity','Organic_carbon', 'Trihalomethanes', 'Turbidity']\n",
+    "numeric_features = ['ph',\n",
+    "                    'Hardness',\n",
+    "                    'Solids',\n",
+    "                    'Chloramines',\n",
+    "                    'Sulfate',\n",
+    "                    'Conductivity',\n",
+    "                    'Organic_carbon',\n",
+    "                    'Trihalomethanes',\n",
+    "                    'Turbidity']\n",
     "categorical_features = ['Potability']\n",
     "transformer = ColumnTransformer([\n",
     "    ('numeric', RobustScaler(), numeric_features)\n",
@@ -245,136 +251,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>numeric__ph</th>\n",
-       "      <th>numeric__Hardness</th>\n",
-       "      <th>numeric__Solids</th>\n",
-       "      <th>numeric__Chloramines</th>\n",
-       "      <th>numeric__Sulfate</th>\n",
-       "      <th>numeric__Conductivity</th>\n",
-       "      <th>numeric__Organic_carbon</th>\n",
-       "      <th>numeric__Trihalomethanes</th>\n",
-       "      <th>numeric__Turbidity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.433417</td>\n",
-       "      <td>2.001473</td>\n",
-       "      <td>0.530563</td>\n",
-       "      <td>1.067017</td>\n",
-       "      <td>1.772637</td>\n",
-       "      <td>-0.556168</td>\n",
-       "      <td>0.181255</td>\n",
-       "      <td>-0.456707</td>\n",
-       "      <td>-0.271335</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-1.632827</td>\n",
-       "      <td>-0.190031</td>\n",
-       "      <td>-0.216287</td>\n",
-       "      <td>-0.113595</td>\n",
-       "      <td>1.221826</td>\n",
-       "      <td>-0.499500</td>\n",
-       "      <td>0.228745</td>\n",
-       "      <td>0.946304</td>\n",
-       "      <td>0.831617</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.662243</td>\n",
-       "      <td>-0.440240</td>\n",
-       "      <td>0.084853</td>\n",
-       "      <td>-0.960733</td>\n",
-       "      <td>0.134540</td>\n",
-       "      <td>-0.225171</td>\n",
-       "      <td>-0.122746</td>\n",
-       "      <td>2.062952</td>\n",
-       "      <td>-1.091632</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.736981</td>\n",
-       "      <td>-0.222374</td>\n",
-       "      <td>0.664751</td>\n",
-       "      <td>0.218844</td>\n",
-       "      <td>-0.111549</td>\n",
-       "      <td>-1.239846</td>\n",
-       "      <td>-1.309287</td>\n",
-       "      <td>-0.547060</td>\n",
-       "      <td>-1.304534</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.067825</td>\n",
-       "      <td>0.645418</td>\n",
-       "      <td>-0.273850</td>\n",
-       "      <td>0.447193</td>\n",
-       "      <td>-0.635374</td>\n",
-       "      <td>0.056382</td>\n",
-       "      <td>-0.451152</td>\n",
-       "      <td>0.107355</td>\n",
-       "      <td>-1.180735</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   numeric__ph  numeric__Hardness  numeric__Solids  numeric__Chloramines  \\\n",
-       "0     0.433417           2.001473         0.530563              1.067017   \n",
-       "1    -1.632827          -0.190031        -0.216287             -0.113595   \n",
-       "2     0.662243          -0.440240         0.084853             -0.960733   \n",
-       "3    -0.736981          -0.222374         0.664751              0.218844   \n",
-       "4    -0.067825           0.645418        -0.273850              0.447193   \n",
-       "\n",
-       "   numeric__Sulfate  numeric__Conductivity  numeric__Organic_carbon  \\\n",
-       "0          1.772637              -0.556168                 0.181255   \n",
-       "1          1.221826              -0.499500                 0.228745   \n",
-       "2          0.134540              -0.225171                -0.122746   \n",
-       "3         -0.111549              -1.239846                -1.309287   \n",
-       "4         -0.635374               0.056382                -0.451152   \n",
-       "\n",
-       "   numeric__Trihalomethanes  numeric__Turbidity  \n",
-       "0                 -0.456707           -0.271335  \n",
-       "1                  0.946304            0.831617  \n",
-       "2                  2.062952           -1.091632  \n",
-       "3                 -0.547060           -1.304534  \n",
-       "4                  0.107355           -1.180735  "
+       "180     0\n",
+       "2261    0\n",
+       "1876    0\n",
+       "5       0\n",
+       "2505    0\n",
+       "       ..\n",
+       "1354    0\n",
+       "1979    1\n",
+       "2700    0\n",
+       "908     0\n",
+       "1099    1\n",
+       "Name: Potability, Length: 1407, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train.head()"
+    "y_train\n"
    ]
   },
   {
@@ -421,7 +324,13 @@
    "outputs": [],
    "source": [
     "models = {}\n",
-    "metricas = pd.DataFrame(columns = ['Method','Acuracia', 'Precisao', \"Recall\",'F1','Log-loss'])\n",
+    "metricas = pd.DataFrame(columns = [\n",
+    "    'Method',\n",
+    "    'Acuracia',\n",
+    "    'Precisao',\n",
+    "    \"Recall\",\n",
+    "    'F1',\n",
+    "    'Log-loss'])\n",
     "\n",
     "logistic_none = linear_model.LogisticRegression(penalty=None, max_iter=1000)\n",
     "logistic_none.fit(X=X_train, y=y_train)\n",
@@ -593,7 +502,11 @@
    "outputs": [],
    "source": [
     "#Logistica com L1\n",
-    "logistic_l1 = linear_model.LogisticRegressionCV(penalty=\"l1\", solver='liblinear', scoring='neg_log_loss', max_iter=50, cv=10).fit(X=X_train, y=y_train)\n",
+    "logistic_l1 = linear_model.LogisticRegressionCV(\n",
+    "    penalty=\"l1\",\n",
+    "    solver='liblinear',\n",
+    "    scoring='neg_log_loss',\n",
+    "    max_iter=50, cv=10).fit(X=X_train, y=y_train)\n",
     "models[\"Logistica_com_l1\"] = logistic_l1"
    ]
   },
@@ -683,7 +596,12 @@
    ],
    "source": [
     "#Computa metricas do modelo\n",
-    "metricas_l1 = pd.DataFrame(columns = ['Method','Acuracia', 'Precisao', \"Recall\",'F1','Log-loss'])\n",
+    "metricas_l1 = pd.DataFrame(columns = ['Method',\n",
+    "                                      'Acuracia',\n",
+    "                                      'Precisao',\n",
+    "                                      \"Recall\",\n",
+    "                                      'F1',\n",
+    "                                      'Log-loss'])\n",
     "resultado_modelo2 = get_model_metrics(\n",
     "    model_name='Logistica_com_l1',\n",
     "    threshold=.5,\n",
